# AOC2024

./: Cargo.toml
src/01/: main.rs
src/02/: main.rs
src/03/: main.rs
src/04/: main.rs
src/1/: main.rs
