[package]
name = "AOC2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "AOC202401"
path = "src/01/main.rs"

[[bin]]
name = "AOC202402"
path = "src/02/main.rs"

[[bin]]
name = "AOC202403"
path = "src/03/main.rs"

[[bin]]
name = "AOC202404"
path = "src/04/main.rs"

[dependencies]
regex = "1.11.1"
